--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ commonware-cryptography = "0.0.63"
 commonware-p2p = "0.0.63"
 commonware-runtime = "0.0.63"
 commonware-utils = "0.0.63"
+futures = "0.3.31"
 governor = "0.6.3"
+rand = "0.8.5"
