--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,11 @@ commonware-cryptography = "0.0.63"
 commonware-p2p = "0.0.63"
 commonware-runtime = "0.0.63"
 commonware-utils = "0.0.63"
+eyre = "0.6.12"
 futures = "0.3.31"
 governor = "0.6.3"
 rand = "0.8.5"
+serde = "1.0.228"
+serde_json = "1.0.145"
+tracing = "0.1.43"
+tracing-subscriber = "0.3.22"
