--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ bytes = "1.11.0"
 clap = "4.5.53"
 commonware-codec = "0.0.63"
 commonware-cryptography = "0.0.63"
+commonware-macros = "0.0.63"
 commonware-p2p = "0.0.63"
 commonware-runtime = "0.0.63"
 commonware-utils = "0.0.63"
@@ -30,5 +31,6 @@ rand = "0.8.5"
 serde = "1.0.228"
 serde_yaml = "0.9.34"
 tempfile = "3.23.0"
+tokio = { version = "1", features = ["time"] }
 tracing = "0.1.43"
 tracing-subscriber = "0.3.22"
