--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,24 @@ name = "battleship-commonware"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "setup"
+path = "src/bin/setup.rs"
+
+[[bin]]
+name = "player"
+path = "src/bin/player.rs"
+
+[[bin]]
+name = "keys"
+path = "src/bin/keys.rs"
+
 [dependencies]
 bytes = "1.11.0"
+clap = "4.5.53"
+commonware-codec = "0.0.63"
 commonware-cryptography = "0.0.63"
+commonware-macros = "0.0.63"
 commonware-p2p = "0.0.63"
 commonware-runtime = "0.0.63"
 commonware-utils = "0.0.63"
@@ -14,6 +29,8 @@ futures = "0.3.31"
 governor = "0.6.3"
 rand = "0.8.5"
 serde = "1.0.228"
-serde_json = "1.0.145"
+serde_yaml = "0.9.34"
+tempfile = "3.23.0"
+tokio = { version = "1", features = ["time"] }
 tracing = "0.1.43"
 tracing-subscriber = "0.3.22"
