split moves into own and opponent moves, including separate grids etc. - also include support for Hit / Miss messages and EndGame

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ commonware-p2p = "0.0.63"
 commonware-runtime = "0.0.63"
 commonware-utils = "0.0.63"
 eyre = "0.6.12"
+fastrand = "2.3.0"
 futures = "0.3.31"
 governor = "0.6.3"
 rand = "0.8.5"
