imp: improve UI (#4)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,9 @@ eyre = "0.6.12"
 fastrand = "2.3.0"
 futures = "0.3.31"
 governor = "0.6.3"
+log = "0.4.29"
 rand = "0.8.5"
+ratatui = "0.29.0"
 serde = "1.0.228"
 serde_yaml = "0.9.34"
 tempfile = "3.23.0"
