--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,10 @@ fastrand = "2.3.0"
 futures = "0.3.31"
 governor = "0.6.3"
 log = "0.4.29"
+parrot = { path = "../parrot", version = "0.1.0" }
 rand = "0.8.5"
 ratatui = "0.29.0"
+regex = "1.12.2"
 serde = "1.0.228"
 serde_yaml = "0.9.34"
 tempfile = "3.23.0"
